# WVS_interfaces

./: CMakeLists.txt  README.md  package.xml
action/: FireCommand.action  Navigate.action  ObserveAreaCommand.action  PtuAimCommand.action  TrackDetectionCommand.action
msg/: AbsolutePTUattitude.msg  AmmunitionState.msg  BattleDamage.msg  CameraFOVCommand.msg  CameraStatus.msg  DamageStatus.msg  DetectedObject.msg  Detection.msg  FiringSolution.msg  IncrementialPTUattitude.msg  LocationPTUattitude.msg  Locations.msg  PTUPose.msg  RelativePTUattitude.msg  RobotControlState.msg  SignatureElement.msg  SpottingReport.msg  WeaponState.msg
srv/: ArmService.srv  BDAService.srv  CDEService.srv  CoverLocationService.srv  LoadService.srv  NavigationEnable.srv  ObservationLocationService.srv  UnloadService.srv
